Corrected collapsing div issue and added new members and recent activity divs

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,11 +47,6 @@ main {
 aside {
   grid-area: aside;
 }
-
-footer {
-  grid-area: footer;
-}
-
 /* Headings */
 
 h1, h2, h3, h4, h5, h6 {
@@ -76,14 +71,12 @@ body {
   grid-template-columns: 80px 10fr;
   grid-template-areas:
     "header header"
-    "aside main"
-    "footer footer";
+    "aside main";
   background-color: #3f94a1;
 }
 .main {
     display: flex;
     background-color: #fff;
-    height: 100vh;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -110,7 +103,6 @@ body {
 }
 .aside {
   background-color: #3dba98;
-  height: 100vh;
 }
 .traffic-stats {
   display: flex;
@@ -242,12 +234,6 @@ button {
 .traffic-container {
   margin: 0 auto;
 }
-.footer {
-  height: 5vh;
-  padding: 2px;
-  color: #fff;
-  text-align: center;
-}
 .bell:hover {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
@@ -295,18 +281,6 @@ button {
 
 .members-wrapper {
   display: flex;
-  flex-direction: column;
-}
-.memberPhoto {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-.member {
-  display: flex;
-  padding: 10px;
-
-}
-.member p {
-  margin-left: auto;
+  flex-direction: row;
+  justify-content: space-between;
 }
